fixed the color on mobile and add just a bit more padding to the sublist

--- a/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/mobile.css
+++ b/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/mobile.css
@@ -207,7 +207,7 @@
 
 .storeId8 .header-menu .close-menu,
 .header-menu .back-button {
-	background-color: #f6f6f6;
+	background-color: #02463b;
 	
 }
 .header-menu .close-menu span,
