--- a/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/styles.css
+++ b/src/Presentation/Nop.Web/Themes/Pavilion/Content/css/styles.css
@@ -6391,7 +6391,7 @@ img.hawthorne-logo {
 @media (min-width: 1025px) {
 .storeId8 .header-menu > ul > li > a,
 .header-menu > ul > li > span {
-	padding: 36px 0px;
+	padding: 40px 0px;
 
 }
 }
